# Drafting

./: .gitignore  Cargo.toml  README.md  build.rs  com.pungpondsalami.drafting.json  com.pungpondsalami.drafting.json~  drafting.gresource  meson.build  windows.yml
.github/workflows/: windows.yml  wiwdows.yml
data/: com.pungpondsalami.drafting.desktop.in  com.pungpondsalami.drafting.gschema.xml  com.pungpondsalami.drafting.metainfo.xml.in  com.pungpondsalami.drafting.service.in  fonts.conf  meson.build  org.gnome.Example.desktop.in  org.gnome.Example.gschema.xml  org.gnome.Example.metainfo.xml.in  org.gnome.Example.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.rs  config.rs  drafting.gresource.xml  engine.rs  main.rs  meson.build  spatial.rs  window.rs  window.ui
