application_id = 'com.pungpondsalami.drafting'

install_data(
  'hicolor/512x512/apps/com.pungpondsalami.drafting.png',
  install_dir: get_option('datadir') / 'icons/hicolor/512x512/apps',
)

install_data(
  'hicolor/symbolic/apps/@0@-symbolic.svg'.format(application_id),
  install_dir: get_option('datadir') / 'icons/hicolor/symbolic/apps',
)