application_id = 'com.pungpondsalami.drafting'

install_data(
  'hicolor/scalable/apps/com.pungpondsalami.drafting.svg',
  install_dir: get_option('datadir') / 'icons/hicolor/scalable/apps',
)

install_data(
  'hicolor/symbolic/apps/@0@-symbolic.svg'.format(application_id),
  install_dir: get_option('datadir') / 'icons/hicolor/symbolic/apps',
)